version/0.16/_sources/api/solver/_autosummary/settings/axis_direction_child.rst.txt
:orphan:

.. _axis_direction_child:

axis_direction_child
====================

.. autoclass:: ansys.fluent.core.solver.settings_232.axis_direction_child.axis_direction_child
    :show-inheritance:

.. rubric:: Included in:

======================================================================   ============================================

Parent                                                                                                        Summary

======================================================================   ============================================
:ref:`axis_direction <axis_direction_2>`                                                      'axis_direction' child.

:ref:`axis_origin <axis_origin_2>`                                                               'axis_origin' child.

:ref:`fan_origin <fan_origin>`                                                                    'fan_origin' child.

:ref:`wall_translation <wall_translation>`                                                  'wall_translation' child.

:ref:`film_velocity <film_velocity>`                                                           'film_velocity' child.

:ref:`band_diffuse_frac <band_diffuse_frac>`                                               'band_diffuse_frac' child.

:ref:`rotation_axis_origin <rotation_axis_origin>`                                      'rotation_axis_origin' child.

:ref:`rotation_axis_direction <rotation_axis_direction>`                             'rotation_axis_direction' child.

:ref:`set_damping_strengths <set_damping_strengths>`                                   'set_damping_strengths' child.

:ref:`phase_based_vof_discretization <phase_based_vof_discretization>`        'phase_based_vof_discretization' child.

:ref:`relaxation_factor <relaxation_factor_1>`                                             'relaxation_factor' child.

:ref:`under_relaxation <under_relaxation_1>`                                             Enter Under Relaxation Menu.

:ref:`local_dt_dualts_relax <local_dt_dualts_relax>`                                   'local_dt_dualts_relax' child.

:ref:`global_dt_pseudo_relax <global_dt_pseudo_relax>`                                'global_dt_pseudo_relax' child.

:ref:`species_child <species_child>`                                                  'child_object_type' of species.

:ref:`input_parameters <input_parameters>`                                    Input Parameter Values of Design Point.

:ref:`output_parameters <output_parameters>`                                 Output Parameter Values of Design Point.

:ref:`partition_origin_vector <partition_origin_vector>`                             'partition_origin_vector' child.

======================================================================   ============================================

